deimos_ui.py first callbacks

--- a/assets/style.css
+++ b/assets/style.css
@@ -67,6 +67,15 @@ body {
     margin: 10px;
 }
 
+#legend-container, #legend-container1, #legend-container2 {
+    display: inline-block;
+    width: calc(25% - 50px);
+    min-width: 140px;
+    padding: 0px;
+    margin: 0px;
+    border: none;
+}
+
 .custom-tab {
     color:#586069;
     border-top-left-radius: 3px;
