--- a/assets/nirspec.css
+++ b/assets/nirspec.css
@@ -76,3 +76,81 @@
 #new-batch > div > button {
     background-color: blue;
 }
+#dark-nirspec-summary-container {
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 70%;
+  margin-top: 50px;
+  margin-left: 3%;
+}
+#dark-nirspec-summary-container1, #dark-nirspec-summary-container2, #dark-nirspec-summary-container3, #dark-nirspec-summary-container4, #dark-nirspec-summary-container5, #dark-nirspec-summary-container6 {
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 45%;
+}
+
+#dark-nirspec-power-container, #dark-nirspec-mechanism-container {
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 80%;
+  margin-top: 5%;
+  margin-left: 10%;
+}
+#dark-nirspec-servers-container {
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 50%;
+  margin-top: 5%;
+  margin-left: 5%;
+}
+#dark-nirspec-computer-container {
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 25%;
+  margin-top: 5%;
+  margin-left: 10%;
+}
+#dark-nirspec-servers-1, #dark-nirspec-servers-2, #dark-nirspec-mechanism1, #dark-nirspec-mechanism2{
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 45%;
+  margin: 10px
+}
+#dark-nirspec-detector-container, #dark-nirspec-dewar-container {
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 40%;
+  margin-top: 5%;
+  margin-left: 5%;
+}
+#dark-nirspec-detector1, #dark-nirspec-detector2, #dark-nirspec-dewar1, #dark-nirspec-dewar2{
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 45%;
+  margin: 10px
+}
+#dark-nirspec-power-container1, #dark-nirspec-power-container2, #dark-nirspec-power-container3, #dark-nirspec-power-container4 {
+  display: inline-block;
+  text-align: center;
+  float: left;
+  width: 23%;
+}
+#dark-nirspec-graph-container1 {
+    width: 75%;
+    min-width: 600px;
+}
+#dark-nirspec-stop-button > div > button, #dark-new-batch > div > button {
+    margin-right: 0px !important;
+    width: 100% !important;
+}
+#dark-new-batch > div > button {
+    background-color: blue;
+}
