--- a/assets/kcwi.css
+++ b/assets/kcwi.css
@@ -27,15 +27,27 @@
 #manufacturing-temp {
     padding-bottom: 20px;
 }
+#help-power-provider {
+  width: 25%;
+  height: 25%;
+}
+#help-power-button {
+  text-align: center;
+  width: 25%;
+  height: 25%;
+  background-color: #f3f3f3;
+  margin-left: 3%;
+}
 #pgpress-container, #thePressure-container {
   display: inline-block;
   text-align: center;
   float: left;
-  width: 47%;
+  width: 30%;
+  margin-left: 5%;
 }
 #thePressure-status, #thePressure-status1, #pgpress-status, #pgpress-status1 {
   float: left;
-  width: 45%;
+  width: 80%;
 }
 #pwstata-status, #pwstatb-status, #pwstatc-status {
   display: inline-block;
